manifests/04-deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    image.openshift.io/triggers: |
      [
        {"from":{"kind":"ImageStreamTag","name":"graph-breaker:bin"},"fieldPath":"spec.template.spec.containers[?(@.name==\"graph-breaker\")].image"}
      ]
  labels:
    app: graph-breaker
  name: graph-breaker
spec:
  replicas: 1
  selector:
    deploymentconfig: graph-breaker
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: graph-breaker
        deploymentconfig: graph-breaker
    spec:
      containers:
        - args:
            - '-c'
            - /etc/graph-breaker/config.toml
          image: ' '
          imagePullPolicy: Always
          name: graph-breaker
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /root/.ssh
              name: volume-ssh-key
              readOnly: true
            - mountPath: /etc/graph-breaker
              name: volume-app-config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccountName: graph-breaker-robot
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: volume-ssh-key
          secret:
            defaultMode: 400
            items:
              - key: ssh-private-key
                path: id_rsa
            secretName: ssh-config
        - configMap:
            defaultMode: 420
            name: app-config
          name: volume-app-config
  test: false
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - graph-breaker
        from:
          kind: ImageStreamTag
          name: 'graph-breaker:bin'
      type: ImageChange
    - type: ConfigChange
