manifests/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graph-breaker
  namespace: graph-breaker
spec:
  selector:
    deploymentconfig: graph-breaker
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
